--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
       referrerpolicy="no-referrer"
     />
 
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/lipis/flag-icons@7.2.3/css/flag-icons.min.css"
+    />
+
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
