fix(ico): updated html ico and added new ico

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <title>PortaFolio DevLiendo</title>
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="website icon" type="image/webp" href="images/code.ico" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
